# mod_xsendfile

./: .gitignore  CMakeLists.txt  Readme.md  mod_xsendfile.c  mod_xsendfile.rc  mod_xsendfile.spec  mod_xsendfile_20.vcproj  mod_xsendfile_22.vcproj  mod_xsendfile_24.vcproj
docs/: README.md  Readme.html  Readme.md
gentoo/: mod_xsendfile-0.12.ebuild
